recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:7: error: illegal start of simple expression
   var a = l.tail
   ^